<resources>
    <string name="app_name">UserLoginApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Name">Name</string>
    <string name="Welcome">Welcome !!</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Logout">Log out</string>
    <string name="Login">Login</string>
</resources>