<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <TextView
        android:id="@+id/textViewWelcomeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Welcome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewWelcomeId"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="@+id/textViewWelcomeId"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeId" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="289dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/EditProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDisplay" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/Logout"
        app:layout_constraintEnd_toEndOf="@+id/btnEditProfile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnEditProfile"
        app:layout_constraintTop_toBottomOf="@+id/btnEditProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>